# bitsofkass

./: .gitignore  LICENSE  README.md
cpp-qt/: .gitignore
cpp-qt/2021-06-26--opencv-hello-world/: CMakeLists.txt  readme.md
cpp-qt/2021-06-26--qt-cmake-hello-world/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
cpp-qt/2021-06-29--qt-photo-filters-scripted/: CMakeLists.txt  readme.md
cpp-qt/2021-06-29--qt-photo-filters-scripted/src/: FastNoiseLite.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.h
cpp-qt/2021-07-14--tree-view-list-view/: CMakeLists.txt  main.cpp  main.qml  treemodel.h  treenode.cpp  treenode.h
cpp-qt/2021-07-15--qt-qml-filters-apply/: CMakeLists.txt  backend.cpp  backend.h  distortion.h  image_provider.h  main.qml
cpp-qt/2021-07-15--qt-qml-filters-apply/src/distortion/: distortion.cpp  distortion_common.h
cpp-qt/2021-07-15--qt-qml-filters-apply/src/distortion/blur/: classic_blur.cpp  classic_blur.h  median_blur.cpp  median_blur.h
cpp-qt/2021-07-15--qt-qml-filters-apply/src/distortion/compression/: jpeg.cpp
cpp-qt/2021-07-15--qt-qml-filters-apply/src/distortion/edge_detection/: canny.cpp  canny.h  laplace.cpp  laplace.h  sobel.h
cpp-qt/2021-07-15--qt-qml-filters-apply/src/distortion/flip_image/: flip_horizontally.h
cpp-qt/2021-07-15--qt-qml-filters-apply/src/distortion/matrix/: matrix.cpp  matrix.h
cpp-qt/2021-07-15--qt-qml-filters-apply/src/distortion/noise/: cellular.cpp  cellular.h  classicnoise.cpp  opensimplex2.cpp  opensimplex2s.cpp  opensimplex2s.h  perlin.h  value_cubic.cpp
cpp-qt/2021-07-15--qt-qml-filters-apply/src/distortion/non_simple_color/: change_image_color.cpp  change_range_color.h  filter2d.cpp
cpp-qt/2021-07-15--qt-qml-filters-apply/src/distortion/optical/: optical_json_object.h  pincushion.h
cpp-qt/2021-07-15--qt-qml-filters-apply/src/distortion/pixel/: horizontal_drop_pixels.h  pixelate.h  pixelatev2.cpp  vertical_and_horizontal_drop_pixels.cpp  vertical_and_horizontal_drop_pixels.h  vertical_drop_pixels.h
cpp-qt/2021-07-15--qt-qml-filters-apply/src/distortion/simple_color/: brightness.h  contrast.cpp  contrast.h  grayscale.h  inverted.cpp  noblue.cpp  nored.cpp
cpp-qt/2021-07-15--qt-qml-filters-apply/src/distortion/transformation/: cropping.h  proximity.h  scale_modifier.cpp  scale_modifier.h  tilt.h  transformation_json_object.h
cpp-qt/2021-07-15--qt-qml-filters-with-arguments/: CMakeLists.txt
cpp-qt/2021-07-15--qt-qml-filters-with-arguments/src/: image_provider.h  main.cpp  main.qml
cpp-qt/2021-07-15--qt-qml-filters-with-arguments/src/distortion/blur/: bilateral_blur.cpp  bilateral_blur.h  gaussian_blur.cpp  gaussian_blur.h
cpp-qt/2021-07-15--qt-qml-filters-with-arguments/src/distortion/compression/: jpeg.h
cpp-qt/2021-07-15--qt-qml-filters-with-arguments/src/distortion/edge_detection/: sobel.cpp
cpp-qt/2021-07-15--qt-qml-filters-with-arguments/src/distortion/flip_image/: flip_horizontally.cpp  flip_vertically.cpp  flip_vertically.h
cpp-qt/2021-07-15--qt-qml-filters-with-arguments/src/distortion/noise/: classicnoise.h  noise_json_object.h  opensimplex2.h  perlin.cpp  value.cpp  value.h  value_cubic.h
cpp-qt/2021-07-20--qt-rest/: .gitignore  CMakeLists.txt  config.h  config_load.cpp  main.cpp
cpp-qt/2021-07-22--qt-zipping/: CMakeLists.txt
cpp-qt/2021-07-23--qt-zipping/: CMakeLists.txt  main.cpp
cpp-qt/2021-09-21--qt-qml-chart-stuff/: CMakeLists.txt  HomeForm.qml  Page1Form.qml  main.cpp  main.qml  qml.qrc
cpp-qt/2021-09-27--qt-qml-bluetooth-state-machine/: CMakeLists.txt  connecting.qml  device.h  main.cpp  state.h
cpp/2020-06-15--lua-sol2-mt/: CMakeLists.txt  main.cpp  worker.lua
cpp/2020-07-12--cmake-glob-tests-test/: CMakeLists.txt
cpp/2020-07-12--cmake-glob-tests-test/tests/: main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
cpp/2020-07-16--cmake-libs-and-finds/executable_producer/: CMakeLists.txt  exe.cpp
cpp/2020-07-16--cmake-libs-and-finds/executable_producer/internal_lib/: CMakeLists.txt  ilib.cpp  ilib.hpp
cpp/2020-07-21--graphics-physics-separation/: CMakeLists.txt  main.cpp
cpp/2020-07-21--graphics-physics-separation/include/: common.hpp  graphics.hpp  physics.hpp
cpp/2020-07-21--graphics-physics-separation/src/: graphics.cpp  main.cpp  physics.cpp
cpp/2020-07-23--hstutter-gcpp-test/: .gitignore  CMakeLists.txt  help-paths-set.cmake  main.cpp
cpp/2020-08-17--zmq-hello-timeouting/: CMakeLists.txt  pull.cpp  push.cpp
cpp/2020-08-24--zmq-tgui-chat/: CMakeLists.txt
cpp/2020-08-24--zmq-tgui-chat/code/: _main.cpp  main.cpp  misc.hpp  shared_data.hpp  work_outgoing.hpp
cpp/2020-08-24--zmq-tgui-chat/code-app/: _main.cpp  chat_gui.hpp  event_internal.hpp  event_packet.hpp  shared_data.hpp
cpp/2020-08-24--zmq-tgui-chat/code-gui/: chat_gui.hpp  get_widgets_from_gui.cpp  process_internal_events.cpp  process_window_events.cpp  render.cpp  set_signals.cpp
cpp/2020-08-24--zmq-tgui-chat/code-misc/: _main.cpp  make_visitor.hpp  misc.hpp
cpp/2020-08-24--zmq-tgui-chat/code-work/: work_incoming.hpp  work_outgoing.hpp
cpp/2020-08-24--zmq-tgui-chat/resources/: form.txt
cpp/2020-09-02--nodes-and-agents/: CMakeLists.txt
cpp/2020-09-02--nodes-and-agents/src/: main.cpp
cpp/2021-10-22--sqlite_orm-blob/: CMakeLists.txt  main.cpp
cpp/asio daytime/: CMakeLists.txt  main_client.cpp  main_server.cpp  pretty_printer.cpp
cpp/indicators test/: CMakeLists.txt
cpp/make_visitor/: CMakeLists.txt  main.cpp  make_visitor.hpp
cpp/rang test/: CMakeLists.txt
cpp/resource access queue/: .gitignore  CMakeLists.txt  aqueue.hpp  test_1.cpp
cpp/resource access queue/lib/: lib.vcxitems
cpp/ser tinytoml test/: CMakeLists.txt
cpp/ser-tomlplusplus-and-cxxopts-test/: CMakeLists.txt  scope_exit.hpp
cpp/tbb message passing calculator/: CMakeLists.txt
cpp/tbb message passing calculator/src/: main.cpp
flutter/: .gitignore
mixed/2020-07-30--lua_read_config_example/cpp/: CMakeLists.txt  main.cpp
rs/2021-06-02--logos-larlpop-parens/: Cargo.toml
rs/2021-06-02--logos-larlpop-parens/src/: main.rs  numbers.lalrpop
(+364 files in other folders)
